--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node API 3 Project",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,6 @@
   },
   "devDependencies": {
     "knex-cleaner": "^1.3.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.3"
   }
 }
